@@ -1,3 +1,9 @@
+2012-03-16  Stuart Caie <kyzer@4u.net>
+
+	* Makefile.am, configure.ac: make the GCC warning flags conditional
+	on using the GCC compiler. Thanks to Dagobert Michelsen for letting
+	me know.
+
 2011-11-25  Stuart Caie <kyzer@4u.net>
 
 	* lzxd_decompress(): Prevent matches that go beyond the start
